# SparkLink-Wireless-Power-Gateway

./: README.md  sle_client_sample
Gateway/gatewayd/: .gitignore  CMakeLists.txt  Makefile  README.md
Gateway/gatewayd/cmake/: rk3506-armhf-toolchain.cmake
Gateway/gatewayd/config/: gateway_config.json
Gateway/gatewayd/docs/: Modbus寄存器仿真规格.md  README.md  gateway_device_model.md  sle_gateway_protocol.md  things_model_v2.md
Gateway/gatewayd/include/app/: collect_worker.h  command_manager.h  gateway_app.h  network_worker.h  publish_manager.h  publish_types.h  sle_ipc_worker.h  worker.h  worker_base.h
Gateway/gatewayd/include/cloud/: mqtt_cloud_client.h
Gateway/gatewayd/include/codec/: modbus_parser.h  sle_frame_parser.h  thingskit_codec.h  thingskit_topics.h
Gateway/gatewayd/include/command/: command_executor.h  command_payload_codec.h  command_router.h  command_types.h  command_validator.h  thing_model_service_registry.h
Gateway/gatewayd/include/common/: blocking_queue.h  constants.h  device_model.h  file_utils.h  logger.h  time_utils.h
Gateway/gatewayd/include/config/: config_manager.h
Gateway/gatewayd/include/datasource/: ipc_cmd_sender.h  ipc_receiver.h  mock_data_source.h  route_table.h  sle_data_source.h
Gateway/gatewayd/include/network/: cellular_provider.h  ethernet_provider.h  i_network_provider.h  net_manager.h  netlink_utils.h  network_utils.h  wifi_provider.h
Gateway/gatewayd/include/state/: device_state_store.h  state_patch_codec.h
Gateway/gatewayd/include/storage/: cache_store.h  sqlite_db.h
Gateway/gatewayd/scripts/: start_gateway.sh  test_model_payload.sh
Gateway/gatewayd/scripts/net/: cellular_up.sh  ethernet_up.sh  wifi_up.sh
Gateway/gatewayd/src/: main.cpp
Gateway/gatewayd/src/app/: collect_worker.cpp  command_manager.cpp  gateway_app.cpp  network_worker.cpp  publish_manager.cpp  sle_ipc_worker.cpp
Gateway/gatewayd/src/cloud/: mqtt_cloud_client.cpp
Gateway/gatewayd/src/codec/: modbus_parser.cpp  sle_frame_parser.cpp  thingskit_codec.cpp
Gateway/gatewayd/src/command/: command_executor.cpp  command_payload_codec.cpp  command_router.cpp  command_validator.cpp  thing_model_service_registry.cpp
Gateway/gatewayd/src/common/: device_model.cpp  file_utils.cpp  logger.cpp  time_utils.cpp
Gateway/gatewayd/src/config/: config_manager.cpp
Gateway/gatewayd/src/datasource/: ipc_cmd_sender.cpp  ipc_receiver.cpp  mock_data_source.cpp  route_table.cpp  sle_data_source.cpp
Gateway/gatewayd/src/network/: cellular_provider.cpp  ethernet_provider.cpp  i_network_provider.cpp  net_manager.cpp  netlink_utils.cpp  network_utils.cpp  wifi_provider.cpp
Gateway/gatewayd/src/state/: device_state_store.cpp  state_patch_codec.cpp
Gateway/gatewayd/src/storage/: cache_store.cpp  sqlite_db.cpp
Gateway/gatewayd/test/: gen_test_frames.py  ipc_send  ipc_send.c  ipc_test_client.py  test_frames.json
Gateway/gatewayd/tests/: run_all_stress_tests.sh  stress_test_high_load.sh  stress_test_mqtt_reconnect.sh  stress_test_network_switch.sh  stress_test_network_unstable.sh
Gateway/gatewayd/things_model/: README.md  all_product_models.json  dtu_node_model.json  env_sensor_model.json  gateway_model.json  relay_device_model.json  single_phase_meter_model.json
Gateway/gatewayd/things_model/model_scripts/: README_使用说明.md  README_测试工具.md  README_测试总结.md  README_物模型同步工具.md  cleanup_and_create_devices.py  thingskit_demo.py  thingskit_full_test.py  thingskit_loop_test.py  thingskit_manager.py  thingskit_model_sync.py  thingskit_model_test.py  thingskit_mqtt_test.py  thingskit_tool.py  thingskit_tree_test.py
Gateway/gatewayd/things_model/model_scripts_v2/: README_使用说明.md  config.example.ini  gen_dashboard.py  go_online.py  mqtt_test.py  sync_model.py  thingskit_demo.py  thingskit_full_test.py  thingskit_loop_test.py  thingskit_manager.py  thingskit_model_convert.py  thingskit_model_test.py  thingskit_model_validate.py  thingskit_mqtt_test.py  thingskit_tool.py  thingskit_tree_test.py  thingskit_verify.py  yuque_crawler.py
edge_gateway/: CMakeLists.txt  Makefile
edge_gateway/cmake/: rk3506-armhf-toolchain.cmake
edge_gateway/src/: main.cpp
(+1276 files in other folders)
